<resources>
    <string name="app_name">泰山森保</string>
    <string name="str_ground_diameter">地径</string>
    <string name="str_photo_full_view">照片(全貌)</string>
    <string name="str_photo_cleanliness">照片(迹地清理)</string>
    <string name="str_photo_cover_root">照片(封根)</string>
    <string name="str_photo_alternative">备选照片</string>
    <string name="str_work_content">本次工作内容</string>
    <string name="str_spot_operator">现场操作人员</string>
    <string name="str_whether_to_sample">是否取样</string>
    <string name="str_processing_method">病虫害树木处理方式</string>
    <string name="str_remarks">备注</string>
    <string name="str_forest_farm">林场</string>
    <string name="str_forest_class">林班</string>
    <string name="str_small_class">小班</string>
    <string name="str_save">保存</string>
    <string name="str_upload">上传</string>
    <string name="str_from_album">从图库中选取</string>
    <string name="str_from_camera">拍照</string>
    <string name="sdcard_tip">请授予读写外部存储的权限</string>
    <string name="camera_tip">请授予使用摄像头的权限</string>
    <string name="uploading_tip">正在上传中...</string>
    <string name="title_activity_login">Sign in</string>
    <string name="str_tree_id">树木编号</string>
    <string name="str_input_username">请输入用户名</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_login">登录</string>
    <string name="str_scan_query">扫码查询</string>
    <string name="str_measure_tip">请点击屏幕，选择两个点</string>
    <string name="str_map_trace">轨迹绘制</string>
    <string name="str_map_mark">地图标注</string>
    <string name="str_distance">距离：</string>
    <string name="str_route_planning">路线规划</string>
    <string name="str_navigation">导航</string>
    <string name="str_close">关闭</string>

</resources>
