<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_light_blue">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_distance"
            />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <Button
        android:id="@+id/bt_route_planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_route_planning"/>

    <Button
        android:id="@+id/bt_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_navigation"/>

    <Button
        android:id="@+id/bt_close_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_close"/>


</LinearLayout>