<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    android:orientation="horizontal">

    <!--图片（全貌）-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_photo_full_view"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <ImageView
            android:id="@+id/iv_photo_full_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_camera"
            android:background="@drawable/selector_image" />

    </LinearLayout>

    <!--图片（迹地清理）-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_photo_cleanliness"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/iv_photo_cleanliness"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_camera"
            android:background="@drawable/selector_image" />

    </LinearLayout>

    <!--图片（封根）-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_photo_cover_root"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/iv_photo_cover_root"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_camera"
            android:background="@drawable/selector_image" />

    </LinearLayout>

    <!--备选图片-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_photo_alternative"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/iv_photo_alternative"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_camera"
            android:background="@drawable/selector_image" />

    </LinearLayout>

</GridLayout>